--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "postpublish": "npm-sns"
   },
   "files": [
     "README.md",
