--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-cdk": "^1.45.0"
   },
   "devDependencies": {
+    "@aws-cdk/aws-appsync": "^1.45.0",
     "@types/node": "^14.0.13",
     "typescript": "^3.9.5"
   },
