--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
+    "target": "ES2020",
     "module": "commonjs",
     "lib": [
-      "es2016",
-      "es2017.object",
-      "es2017.string"
+      "es2020"
     ],
     "outDir": "lib/",
     "declaration": true,
@@ -18,8 +16,7 @@
     "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": false,
-    "inlineSourceMap": true,
-    "inlineSources": true,
+    "inlineSourceMap": false,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
     "typeRoots": [
