--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "url": "https://github.com/nak2k/node-aws-cdk-util/issues"
   },
   "dependencies": {
-    "@aws-cdk/aws-logs": "^1.45.0",
-    "@aws-cdk/core": "^1.45.0",
-    "aws-cdk": "^1.45.0"
+    "@aws-cdk/aws-appsync": "^1.51.0",
+    "@aws-cdk/aws-logs": "^1.51.0",
+    "@aws-cdk/core": "^1.51.0",
+    "aws-cdk": "^1.51.0"
   },
   "devDependencies": {
-    "@aws-cdk/aws-appsync": "^1.45.0",
-    "@types/node": "^14.0.13",
-    "typescript": "^3.9.5"
+    "@types/node": "^14.0.23",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "typescript": "^3.9.6"
   },
   "homepage": "https://github.com/nak2k/node-aws-cdk-util",
   "keywords": [
@@ -29,9 +31,12 @@
   },
   "scripts": {
     "build": "tsc",
-    "watch": "tsc -w",
-    "prepublishOnly": "npm run build",
-    "postpublish": "npm-sns"
+    "clean": "rimraf lib",
+    "prepublishOnly": "run-s test",
+    "postpublish": "npm-sns",
+    "pretest": "run-s clean build",
+    "test": "",
+    "watch": "tsc -w"
   },
   "files": [
     "README.md",
