--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-appsync": "^1.51.0",
+    "@aws-cdk/aws-codebuild": "^1.51.0",
     "@aws-cdk/aws-logs": "^1.51.0",
     "@aws-cdk/core": "^1.51.0",
     "aws-cdk": "^1.51.0"
