--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "url": "https://github.com/nak2k/node-aws-cdk-util/issues"
   },
   "devDependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.332.0",
+    "@aws-sdk/client-codebuild": "^3.332.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.332.0",
+    "@aws-sdk/client-lambda": "^3.332.0",
+    "@aws-sdk/client-secrets-manager": "^3.332.0",
+    "@aws-sdk/client-ssm": "^3.332.0",
     "@types/aws-lambda": "^8.10.115",
     "@types/node": "^20.1.3",
     "aws-cdk-lib": "^2.79.1",
-    "aws-sdk": "^2.1337.0",
     "constructs": "^10.2.20",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.0",
